src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    LCURLY
    NEWLINE
    RCURLY

Grammar

Rule 0     S' -> program
Rule 1     IDENTIFIER_EXPR -> IDENTIFIER
Rule 2     expression -> IDENTIFIER_EXPR
Rule 3     expression -> NUMBER
Rule 4     expression -> BOOLEAN
Rule 5     expression -> CHAR
Rule 6     expression -> STRING
Rule 7     expression -> LPAREN expression RPAREN
Rule 8     expression -> expression PLUS expression
Rule 9     expression -> expression MINUS expression
Rule 10    expression -> expression TIMES expression
Rule 11    expression -> expression DIVIDE expression
Rule 12    expression -> expression AND_BIT expression
Rule 13    expression -> expression OR_BIT expression
Rule 14    expression -> expression MOD expression
Rule 15    expression -> expression XOR_BIT expression
Rule 16    expression -> expression SMALLER expression
Rule 17    expression -> expression GREATER expression
Rule 18    expression -> expression EQUALS expression
Rule 19    expression -> expression SMALLER_EQ expression
Rule 20    expression -> expression GREATER_EQ expression
Rule 21    expression -> expression NOT_EQ expression
Rule 22    expression -> expression AND_BOOL expression
Rule 23    expression -> expression OR_BOOL expression
Rule 24    expression -> expression XOR_BOOL expression
Rule 25    expression -> NOT_BIT expression
Rule 26    expression -> NOT_BOOL expression
Rule 27    expression -> MINUS expression
Rule 28    expression -> LBRACKET arg_list RBRACKET
Rule 29    expression -> LPAREN arg_list RPAREN
Rule 30    arg_list -> expression COMMA arg_list
Rule 31    arg_list -> expression
Rule 32    expression -> HASH WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
Rule 33    statement -> assign
Rule 34    statement -> declaration
Rule 35    statement -> condition
Rule 36    statement -> iteration
Rule 37    statement -> func_decl
Rule 38    statement -> return
Rule 39    statement -> ctn
Rule 40    statement -> brk
Rule 41    statement -> onbrk
Rule 42    statement -> expression
Rule 43    block -> statement_list
Rule 44    statement_list -> statement_list statement SEMICOLON
Rule 45    statement_list -> statement SEMICOLON
Rule 46    statement -> PRINT LPAREN expression RPAREN
Rule 47    assign -> IDENTIFIER LASSIGN expression
Rule 48    assign -> expression RASSIGN IDENTIFIER
Rule 49    declaration -> TYPE HASH IDENTIFIER LASSIGN expression
Rule 50    declaration -> expression RASSIGN IDENTIFIER HASH TYPE
Rule 51    declaration -> TYPE HASH IDENTIFIER
Rule 52    declaration -> IDENTIFIER HASH TYPE
Rule 53    condition -> IF expression DO block DONE
Rule 54    condition -> IF expression DO block ELSE DO block DONE
Rule 55    condition -> IF expression DO block elif_list DONE
Rule 56    condition -> IF expression DO block elif_list ELSE DO block DONE
Rule 57    elif -> ELIF expression DO block
Rule 58    elif_list -> elif
Rule 59    elif_list -> elif_list elif
Rule 60    iteration -> UNTIL expression DO block DONE
Rule 61    iteration -> DO block DONE UNTIL expression
Rule 62    func_decl -> FUNC HASH IDENTIFIER LASSIGN WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
Rule 63    param_list -> param_list COMMA param
Rule 64    param_list -> param
Rule 65    param -> TYPE HASH IDENTIFIER
Rule 66    param_call_list -> param_call_list COMMA expression
Rule 67    param_call_list -> expression
Rule 68    expression -> IDENTIFIER LPAREN RPAREN
Rule 69    expression -> IDENTIFIER LPAREN param_call_list RPAREN
Rule 70    return -> RETURN expression
Rule 71    ctn -> CONTINUE
Rule 72    brk -> BREAK
Rule 73    onbrk -> ONBREAK statement
Rule 74    program -> program statement SEMICOLON
Rule 75    program -> statement SEMICOLON

Terminals, with rules where they appear

AND_BIT              : 12
AND_BOOL             : 22
BOOLEAN              : 4
BREAK                : 72
CHAR                 : 5
COMMA                : 30 63 66
COMMENT              : 
CONTINUE             : 71
DIVIDE               : 11
DO                   : 32 53 54 54 55 56 56 57 60 61 62
DONE                 : 32 53 54 55 56 60 61 62
ELIF                 : 57
ELSE                 : 54 56
EQUALS               : 18
FUNC                 : 62
FUNCARROW            : 32 62
GREATER              : 17
GREATER_EQ           : 20
HASH                 : 32 49 50 51 52 62 65
IDENTIFIER           : 1 47 48 49 50 51 52 62 65 68 69
IF                   : 53 54 55 56
LASSIGN              : 47 49 62
LBRACKET             : 28
LCURLY               : 
LPAREN               : 7 29 32 46 62 68 69
MINUS                : 9 27
MOD                  : 14
NEWLINE              : 
NOT_BIT              : 25
NOT_BOOL             : 26
NOT_EQ               : 21
NUMBER               : 3
ONBREAK              : 73
OR_BIT               : 13
OR_BOOL              : 23
PLUS                 : 8
PRINT                : 46
RASSIGN              : 48 50
RBRACKET             : 28
RCURLY               : 
RETURN               : 70
RPAREN               : 7 29 32 46 62 68 69
SEMICOLON            : 44 45 74 75
SMALLER              : 16
SMALLER_EQ           : 19
STRING               : 6
TIMES                : 10
TYPE                 : 32 49 50 51 52 62 65
UNTIL                : 60 61
WITH                 : 32 62
XOR_BIT              : 15
XOR_BOOL             : 24
error                : 

Nonterminals, with rules where they appear

IDENTIFIER_EXPR      : 2
arg_list             : 28 29 30
assign               : 33
block                : 32 53 54 54 55 56 56 57 60 61 62
brk                  : 40
condition            : 35
ctn                  : 39
declaration          : 34
elif                 : 58 59
elif_list            : 55 56 59
expression           : 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26 27 30 31 42 46 47 48 49 50 53 54 55 56 57 60 61 66 67 70
func_decl            : 37
iteration            : 36
onbrk                : 41
param                : 63 64
param_call_list      : 66 69
param_list           : 32 62 63
program              : 74 0
return               : 38
statement            : 44 45 73 74 75
statement_list       : 43 44

Parsing method: LALR

state 0

    (0) S' -> . program
    (74) program -> . program statement SEMICOLON
    (75) program -> . statement SEMICOLON
    (33) statement -> . assign
    (34) statement -> . declaration
    (35) statement -> . condition
    (36) statement -> . iteration
    (37) statement -> . func_decl
    (38) statement -> . return
    (39) statement -> . ctn
    (40) statement -> . brk
    (41) statement -> . onbrk
    (42) statement -> . expression
    (46) statement -> . PRINT LPAREN expression RPAREN
    (47) assign -> . IDENTIFIER LASSIGN expression
    (48) assign -> . expression RASSIGN IDENTIFIER
    (49) declaration -> . TYPE HASH IDENTIFIER LASSIGN expression
    (50) declaration -> . expression RASSIGN IDENTIFIER HASH TYPE
    (51) declaration -> . TYPE HASH IDENTIFIER
    (52) declaration -> . IDENTIFIER HASH TYPE
    (53) condition -> . IF expression DO block DONE
    (54) condition -> . IF expression DO block ELSE DO block DONE
    (55) condition -> . IF expression DO block elif_list DONE
    (56) condition -> . IF expression DO block elif_list ELSE DO block DONE
    (60) iteration -> . UNTIL expression DO block DONE
    (61) iteration -> . DO block DONE UNTIL expression
    (62) func_decl -> . FUNC HASH IDENTIFIER LASSIGN WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
    (70) return -> . RETURN expression
    (71) ctn -> . CONTINUE
    (72) brk -> . BREAK
    (73) onbrk -> . ONBREAK statement
    (2) expression -> . IDENTIFIER_EXPR
    (3) expression -> . NUMBER
    (4) expression -> . BOOLEAN
    (5) expression -> . CHAR
    (6) expression -> . STRING
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression AND_BIT expression
    (13) expression -> . expression OR_BIT expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression XOR_BIT expression
    (16) expression -> . expression SMALLER expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression SMALLER_EQ expression
    (20) expression -> . expression GREATER_EQ expression
    (21) expression -> . expression NOT_EQ expression
    (22) expression -> . expression AND_BOOL expression
    (23) expression -> . expression OR_BOOL expression
    (24) expression -> . expression XOR_BOOL expression
    (25) expression -> . NOT_BIT expression
    (26) expression -> . NOT_BOOL expression
    (27) expression -> . MINUS expression
    (28) expression -> . LBRACKET arg_list RBRACKET
    (29) expression -> . LPAREN arg_list RPAREN
    (32) expression -> . HASH WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
    (68) expression -> . IDENTIFIER LPAREN RPAREN
    (69) expression -> . IDENTIFIER LPAREN param_call_list RPAREN
    (1) IDENTIFIER_EXPR -> . IDENTIFIER

    PRINT           shift and go to state 13
    IDENTIFIER      shift and go to state 15
    TYPE            shift and go to state 16
    IF              shift and go to state 18
    UNTIL           shift and go to state 20
    DO              shift and go to state 19
    FUNC            shift and go to state 21
    RETURN          shift and go to state 22
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    ONBREAK         shift and go to state 25
    NUMBER          shift and go to state 27
    BOOLEAN         shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    LPAREN          shift and go to state 14
    NOT_BIT         shift and go to state 32
    NOT_BOOL        shift and go to state 33
    MINUS           shift and go to state 31
    LBRACKET        shift and go to state 34
    HASH            shift and go to state 17

    program                        shift and go to state 1
    statement                      shift and go to state 2
    assign                         shift and go to state 3
    declaration                    shift and go to state 4
    condition                      shift and go to state 5
    iteration                      shift and go to state 6
    func_decl                      shift and go to state 7
    return                         shift and go to state 8
    ctn                            shift and go to state 9
    brk                            shift and go to state 10
    onbrk                          shift and go to state 11
    expression                     shift and go to state 12
    IDENTIFIER_EXPR                shift and go to state 26

state 1

    (0) S' -> program .
    (74) program -> program . statement SEMICOLON
    (33) statement -> . assign
    (34) statement -> . declaration
    (35) statement -> . condition
    (36) statement -> . iteration
    (37) statement -> . func_decl
    (38) statement -> . return
    (39) statement -> . ctn
    (40) statement -> . brk
    (41) statement -> . onbrk
    (42) statement -> . expression
    (46) statement -> . PRINT LPAREN expression RPAREN
    (47) assign -> . IDENTIFIER LASSIGN expression
    (48) assign -> . expression RASSIGN IDENTIFIER
    (49) declaration -> . TYPE HASH IDENTIFIER LASSIGN expression
    (50) declaration -> . expression RASSIGN IDENTIFIER HASH TYPE
    (51) declaration -> . TYPE HASH IDENTIFIER
    (52) declaration -> . IDENTIFIER HASH TYPE
    (53) condition -> . IF expression DO block DONE
    (54) condition -> . IF expression DO block ELSE DO block DONE
    (55) condition -> . IF expression DO block elif_list DONE
    (56) condition -> . IF expression DO block elif_list ELSE DO block DONE
    (60) iteration -> . UNTIL expression DO block DONE
    (61) iteration -> . DO block DONE UNTIL expression
    (62) func_decl -> . FUNC HASH IDENTIFIER LASSIGN WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
    (70) return -> . RETURN expression
    (71) ctn -> . CONTINUE
    (72) brk -> . BREAK
    (73) onbrk -> . ONBREAK statement
    (2) expression -> . IDENTIFIER_EXPR
    (3) expression -> . NUMBER
    (4) expression -> . BOOLEAN
    (5) expression -> . CHAR
    (6) expression -> . STRING
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression AND_BIT expression
    (13) expression -> . expression OR_BIT expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression XOR_BIT expression
    (16) expression -> . expression SMALLER expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression SMALLER_EQ expression
    (20) expression -> . expression GREATER_EQ expression
    (21) expression -> . expression NOT_EQ expression
    (22) expression -> . expression AND_BOOL expression
    (23) expression -> . expression OR_BOOL expression
    (24) expression -> . expression XOR_BOOL expression
    (25) expression -> . NOT_BIT expression
    (26) expression -> . NOT_BOOL expression
    (27) expression -> . MINUS expression
    (28) expression -> . LBRACKET arg_list RBRACKET
    (29) expression -> . LPAREN arg_list RPAREN
    (32) expression -> . HASH WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
    (68) expression -> . IDENTIFIER LPAREN RPAREN
    (69) expression -> . IDENTIFIER LPAREN param_call_list RPAREN
    (1) IDENTIFIER_EXPR -> . IDENTIFIER

    PRINT           shift and go to state 13
    IDENTIFIER      shift and go to state 15
    TYPE            shift and go to state 16
    IF              shift and go to state 18
    UNTIL           shift and go to state 20
    DO              shift and go to state 19
    FUNC            shift and go to state 21
    RETURN          shift and go to state 22
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    ONBREAK         shift and go to state 25
    NUMBER          shift and go to state 27
    BOOLEAN         shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    LPAREN          shift and go to state 14
    NOT_BIT         shift and go to state 32
    NOT_BOOL        shift and go to state 33
    MINUS           shift and go to state 31
    LBRACKET        shift and go to state 34
    HASH            shift and go to state 17

    statement                      shift and go to state 35
    assign                         shift and go to state 3
    declaration                    shift and go to state 4
    condition                      shift and go to state 5
    iteration                      shift and go to state 6
    func_decl                      shift and go to state 7
    return                         shift and go to state 8
    ctn                            shift and go to state 9
    brk                            shift and go to state 10
    onbrk                          shift and go to state 11
    expression                     shift and go to state 12
    IDENTIFIER_EXPR                shift and go to state 26

state 2

    (75) program -> statement . SEMICOLON

    SEMICOLON       shift and go to state 36


state 3

    (33) statement -> assign .

    SEMICOLON       reduce using rule 33 (statement -> assign .)


state 4

    (34) statement -> declaration .

    SEMICOLON       reduce using rule 34 (statement -> declaration .)


state 5

    (35) statement -> condition .

    SEMICOLON       reduce using rule 35 (statement -> condition .)


state 6

    (36) statement -> iteration .

    SEMICOLON       reduce using rule 36 (statement -> iteration .)


state 7

    (37) statement -> func_decl .

    SEMICOLON       reduce using rule 37 (statement -> func_decl .)


state 8

    (38) statement -> return .

    SEMICOLON       reduce using rule 38 (statement -> return .)


state 9

    (39) statement -> ctn .

    SEMICOLON       reduce using rule 39 (statement -> ctn .)


state 10

    (40) statement -> brk .

    SEMICOLON       reduce using rule 40 (statement -> brk .)


state 11

    (41) statement -> onbrk .

    SEMICOLON       reduce using rule 41 (statement -> onbrk .)


state 12

    (42) statement -> expression .
    (48) assign -> expression . RASSIGN IDENTIFIER
    (50) declaration -> expression . RASSIGN IDENTIFIER HASH TYPE
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND_BIT expression
    (13) expression -> expression . OR_BIT expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . XOR_BIT expression
    (16) expression -> expression . SMALLER expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . EQUALS expression
    (19) expression -> expression . SMALLER_EQ expression
    (20) expression -> expression . GREATER_EQ expression
    (21) expression -> expression . NOT_EQ expression
    (22) expression -> expression . AND_BOOL expression
    (23) expression -> expression . OR_BOOL expression
    (24) expression -> expression . XOR_BOOL expression

    SEMICOLON       reduce using rule 42 (statement -> expression .)
    RASSIGN         shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    AND_BIT         shift and go to state 42
    OR_BIT          shift and go to state 43
    MOD             shift and go to state 44
    XOR_BIT         shift and go to state 45
    SMALLER         shift and go to state 46
    GREATER         shift and go to state 47
    EQUALS          shift and go to state 48
    SMALLER_EQ      shift and go to state 49
    GREATER_EQ      shift and go to state 50
    NOT_EQ          shift and go to state 51
    AND_BOOL        shift and go to state 52
    OR_BOOL         shift and go to state 53
    XOR_BOOL        shift and go to state 54


state 13

    (46) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 55


state 14

    (7) expression -> LPAREN . expression RPAREN
    (29) expression -> LPAREN . arg_list RPAREN
    (2) expression -> . IDENTIFIER_EXPR
    (3) expression -> . NUMBER
    (4) expression -> . BOOLEAN
    (5) expression -> . CHAR
    (6) expression -> . STRING
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression AND_BIT expression
    (13) expression -> . expression OR_BIT expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression XOR_BIT expression
    (16) expression -> . expression SMALLER expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression SMALLER_EQ expression
    (20) expression -> . expression GREATER_EQ expression
    (21) expression -> . expression NOT_EQ expression
    (22) expression -> . expression AND_BOOL expression
    (23) expression -> . expression OR_BOOL expression
    (24) expression -> . expression XOR_BOOL expression
    (25) expression -> . NOT_BIT expression
    (26) expression -> . NOT_BOOL expression
    (27) expression -> . MINUS expression
    (28) expression -> . LBRACKET arg_list RBRACKET
    (29) expression -> . LPAREN arg_list RPAREN
    (32) expression -> . HASH WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
    (68) expression -> . IDENTIFIER LPAREN RPAREN
    (69) expression -> . IDENTIFIER LPAREN param_call_list RPAREN
    (30) arg_list -> . expression COMMA arg_list
    (31) arg_list -> . expression
    (1) IDENTIFIER_EXPR -> . IDENTIFIER

    NUMBER          shift and go to state 27
    BOOLEAN         shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    LPAREN          shift and go to state 14
    NOT_BIT         shift and go to state 32
    NOT_BOOL        shift and go to state 33
    MINUS           shift and go to state 31
    LBRACKET        shift and go to state 34
    HASH            shift and go to state 17
    IDENTIFIER      shift and go to state 58

    expression                     shift and go to state 56
    arg_list                       shift and go to state 57
    IDENTIFIER_EXPR                shift and go to state 26

state 15

    (47) assign -> IDENTIFIER . LASSIGN expression
    (52) declaration -> IDENTIFIER . HASH TYPE
    (68) expression -> IDENTIFIER . LPAREN RPAREN
    (69) expression -> IDENTIFIER . LPAREN param_call_list RPAREN
    (1) IDENTIFIER_EXPR -> IDENTIFIER .

    LASSIGN         shift and go to state 59
    HASH            shift and go to state 60
    LPAREN          shift and go to state 61
    RASSIGN         reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    PLUS            reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    MINUS           reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    TIMES           reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    DIVIDE          reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    AND_BIT         reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    OR_BIT          reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    MOD             reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    XOR_BIT         reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    SMALLER         reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    GREATER         reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    EQUALS          reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    SMALLER_EQ      reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    GREATER_EQ      reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    NOT_EQ          reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    AND_BOOL        reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    OR_BOOL         reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    XOR_BOOL        reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)
    SEMICOLON       reduce using rule 1 (IDENTIFIER_EXPR -> IDENTIFIER .)


state 16

    (49) declaration -> TYPE . HASH IDENTIFIER LASSIGN expression
    (51) declaration -> TYPE . HASH IDENTIFIER

    HASH            shift and go to state 62


state 17

    (32) expression -> HASH . WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE

    WITH            shift and go to state 63


state 18

    (53) condition -> IF . expression DO block DONE
    (54) condition -> IF . expression DO block ELSE DO block DONE
    (55) condition -> IF . expression DO block elif_list DONE
    (56) condition -> IF . expression DO block elif_list ELSE DO block DONE
    (2) expression -> . IDENTIFIER_EXPR
    (3) expression -> . NUMBER
    (4) expression -> . BOOLEAN
    (5) expression -> . CHAR
    (6) expression -> . STRING
    (7) expression -> . LPAREN expression RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression AND_BIT expression
    (13) expression -> . expression OR_BIT expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression XOR_BIT expression
    (16) expression -> . expression SMALLER expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression SMALLER_EQ expression
    (20) expression -> . expression GREATER_EQ expression
    (21) expression -> . expression NOT_EQ expression
    (22) expression -> . expression AND_BOOL expression
    (23) expression -> . expression OR_BOOL expression
    (24) expression -> . expression XOR_BOOL expression
    (25) expression -> . NOT_BIT expression
    (26) expression -> . NOT_BOOL expression
    (27) expression -> . MINUS expression
    (28) expression -> . LBRACKET arg_list RBRACKET
    (29) expression -> . LPAREN arg_list RPAREN
    (32) expression -> . HASH WITH LPAREN param_list RPAREN FUNCARROW TYPE DO block DONE
    (68) expression -> . IDENTIFIER LPAREN RPAREN
    (69) expression -> . IDENTIFIER LPAREN param_call_list RPAREN
    (1) IDENTIFIER_EXPR -> . IDENTIFIER

    NUMBER          shift and go to state 27
    BOOLEAN         shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    LPAREN          shift and go to state 14
    NOT_BIT         shift and go to state 32
    NOT_BOOL        shift and go to state 33
    MINUS           shift and go to state 31
    LBRACKET        shift and go to state 34
    HASH            shift and go to state 17
    IDENTIFIER      shift and go to state 58

    expression                     shift and go to state 64
    IDENTIFIER_EXPR                shift and go to state 26

state 19
